authorization added remaining API Documentation
